@@ -3,11 +3,11 @@ package com.aegis.utils;
 import cn.hutool.json.JSONUtil;
 import com.aegis.common.result.Result;
 import com.aegis.common.result.ResultCodeEnum;
-import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 
@@ -31,12 +31,15 @@ public final class ResponseUtils {
         response.setHeader("Content-disposition", "attachment;filename*=utf-8''" + System.currentTimeMillis() + ".xlsx");
     }
 
-    @SneakyThrows
     public static void setFileDownloadHeader(HttpServletResponse response, String fileName) {
         response.setContentType("application/octet-stream");
         response.setCharacterEncoding(StandardCharsets.UTF_8.name());
-        response.setHeader("Content-Disposition",
-                "attachment; filename=\"" + URLEncoder.encode(fileName, String.valueOf(StandardCharsets.UTF_8)) + "\"");
+        try {
+            response.setHeader("Content-Disposition",
+                    "attachment; filename=\"" + URLEncoder.encode(fileName, StandardCharsets.UTF_8.name()) + "\"");
+        } catch (UnsupportedEncodingException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     /**
